--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>CocoonVideo</title>
   </head>
   <body>
-    <p>CocoonVideo assets OK</p>
+    <p>CocoonVideo assets OK v4</p>
   </body>
 </html>
